--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-body {
-  display: block;
-  margin:0;
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  align-items: center; /* 수직 가운데 정렬 */
+  justify-content: center; /* 수평 가운데 정렬 */
+  font-family: Arial, sans-serif;
+  text-align: center;
+  font-size: 72px;
 }
